api key private

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         
         <!-- <span class="js-weather"></span> -->
-
+        <script src="key.js"></script>
         <script src="clock.js"></script>
         <script src="gretting.js"></script>
         <script src="todo.js"></script>
