--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         
         
         <!-- <span class="js-weather"></span> -->
-        <script src="key.js"></script>
+        <script type="module" src="key.js"></script>
         <script src="clock.js"></script>
         <script src="gretting.js"></script>
         <script src="todo.js"></script>
         <script src="bg.js"></script>
-        <script src="weather.js"></script>
+        <script type="module" src="weather.js"></script>
     </body>
 </html>
